# open_dnsdb

./: .gitignore  CODE_OF_CONDUCT.md  README.md  dnsdb_command.py  requirements.txt  setup.cfg  setup.py  test-requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md
dns_updater/: app.py  config.py  updater.py
dns_updater/api/: __init__.py  worker.py
dns_updater/templates/: healthcheck.html
dns_updater/utils/: handler.py  tool_classes.py  updater_util.py
dns_updater/workers/: view_worker.py  zone_worker.py
dnsdb/: __init__.py  config.py  deploy.py  migrate.py
dnsdb/constant/: constant.py  operation_type.py
dnsdb/static/css/: app.5137ea317b6c1209dd442cc030992313.css  app.5137ea317b6c1209dd442cc030992313.css.map  app.e06b02791ae39e87b842f0495824c8e6.css  app.e06b02791ae39e87b842f0495824c8e6.css.map  app.e52082c507bdeb4a8123fcc4431c66bb.css  app.e52082c507bdeb4a8123fcc4431c66bb.css.map
dnsdb/static/js/: app.47d27effc4587ccfd12e.js  app.47d27effc4587ccfd12e.js.map  app.8f6318bdebfe230b5a3f.js  (+16 more)
dnsdb/templates/: index.html
dnsdb_common/dal/: __init__.py  host_group_conf.py  operation_log.py  subnet_ip.py  user.py  view_isp_acl.py  view_migrate.py  view_record.py  zone_record.py
dnsdb_fe/: index.html  package-lock.json  package.json
dnsdb_fe/src/: App.vue  main.js  style.css
docs/: conf.py  index.rst
etc/beta/: common.conf  dnsdb-updater.conf  dnsdb.conf  supervisor-dnsdb.conf  supervisor-updater.conf
etc/template/: zone_header
tools/: install_venv.py  install_venv_common.py  with_venv.sh
tools/updater/: mkrdns  pre_updater_start.sh
(+61 files in other folders)
