[metadata]
name = dnsdb
platforms    = any
license_file = LICENSE
description  = Open-source dns management platform based on bind running on Python 2.7.
long_description = file: README.md
keywords     = dns, view
classifier =
    Development Status :: 1 - Beta
    Intended Audience :: End Users
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python :: 2.7
Topic :: dnsdb

[files]
packages =
    dnsdb_updater
data_files =

[entry_points]
console_scripts =
    dnsdb-conf-updater = dns_updater.app:app_start
    dnsdb-zone-updater = dns_updater.updater:updater
    dnsdb = dnsdb:main
